@@ -1,3 +1,7 @@
+2011-06-13  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK][!!!] Add markup for microformat in office address
+
 2011-06-12  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] #27380: Do not include community parameter in generated URL
